--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                         </li>
                         <li>
                             <i class="fas fa-envelope-open-text"></i>
-                            <a href="mailto:runokcontact@gmail.com">runokcontact@gmail.com</a>
+                            <a href="mailto:R2MIcontact@gmail.com">R2MIcontact@gmail.com</a>
                         </li>
                     </ul>
                 </div>
@@ -222,7 +222,7 @@
         <!--/.sidebar-area-->
 
         <div id="preloader">
-            <div class="loading" data-loading-text="Runok"></div>
+            <div class="loading" data-loading-text="R2MI"></div>
         </div>
         <!-- ./ preloader -->
 
@@ -230,16 +230,16 @@
         <div id="smooth-content">
 
         <section class="hero-section-2">
-            <div class="hero-text">Creative
-                <span class="inner-text">
-                    Studio
-                    <span class="container-svg">
+            <div class="hero-text">Route to 
+                <span class="inner-text" style="color: #3F5AF3;">
+                    Market
+                    <!-- <span class="container-svg">
                         <svg>
                             <text class="dashed" x="0" y="0" dominant-baseline="hanging">
-                                <tspan x="0" dy="0">Studio</tspan>
+                                <tspan x="0" dy="0">R2MI</tspan>
                             </text>
                         </svg>
-                    </span>
+                    </span> -->
                 </span>
             </div>
             <div class="shapes">
@@ -278,9 +278,9 @@
                     <div class="hero-info">
                         <div class="section-heading">
                             <h4 class="sub-heading after-none anim-text" data-text-animation="fade-in" data-duration="1.5">Welcome to our agency</h4>
-                            <h2 class="section-title anim-text">Digital Creative</h2>
-                            <h2 class="section-title anim-text">Studio</h2>
-                            <p>Over 15 years in the game & build successful, profitable products.</p>
+                            <h2 class="section-title anim-text">Strategic Growth</h2>
+                            <h2 class="section-title anim-text">Hub</h2>
+                            <p>India’s first fully integrated sales, distribution, and marketing powerhouse, driving business success with precision and innovation.</p>
                             <a href="about.html" class="rr-primary-btn">Get Started Now <i class="fa-regular fa-arrow-right"></i></a>
                         </div>
                     </div>
@@ -318,7 +318,7 @@
                                         </svg>
                                     </div>
                                     <p>Duis iaculis ut fames vestibulum tempus orci e penatibus erat plon aliquam platea.</p>
-                                    <a href="service-details.html" class="service-btn">Get Started Now <i class="fa-regular fa-arrow-right"></i></a>
+                                    <a href="service-details.html" class="service-btn">Get Started Now</a>
                                 </div>
                             </div>
                         </div>
@@ -980,7 +980,7 @@
                 <div class="container">
                     <div class="row copyright-content justify-content-center">
                         <div class="col-lg-6 col-md-12">
-                        <p class="mb-0">© 2024 Runok. All Rights Reserved.</p>
+                        <p class="mb-0">© 2024 R2MI. All Rights Reserved.</p>
                         </div>
                         <div class="col-lg-6 col-md-12">
                             <ul class="copyright-list">
