--- a/project.html
+++ b/project.html
@@ -207,7 +207,7 @@
                         </li>
                         <li>
                             <i class="fas fa-envelope-open-text"></i>
-                            <a href="mailto:runokcontact@gmail.com">runokcontact@gmail.com</a>
+                            <a href="mailto:R2MIcontact@gmail.com">R2MIcontact@gmail.com</a>
                         </li>
                     </ul>
                 </div>
@@ -222,7 +222,7 @@
         <!--/.sidebar-area-->
 
         <div id="preloader">
-            <div class="loading" data-loading-text="Runok"></div>
+            <div class="loading" data-loading-text="R2MI"></div>
         </div>
         <!-- ./ preloader -->
 
@@ -393,7 +393,7 @@
                 <div class="container">
                     <div class="row copyright-content">
                         <div class="col-md-6">
-                            <p>© 2024 Runok. All Rights Reserved.</p>
+                            <p>© 2024 R2MI. All Rights Reserved.</p>
                         </div>
                         <div class="col-md-6">
                             <ul class="social-list">
