awards, teams, articles section removed + counter section data updated

--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
         </section>
         <!-- ./ process-section-2 -->
 
-        <section class="reward-section fade-wrapper pb-130">
+        <!-- <section class="reward-section fade-wrapper pb-130">
             <div class="container">
                 <div class="section-heading text-center">
                     <span class="bg-text">Awards</span>
@@ -616,7 +616,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- ./ reward-text -->
 
         <div class="running-text running-1">
@@ -677,7 +677,7 @@
         </div>
         <!-- ./ running-text -->
 
-        <section class="team-section pt-130 fade-wrapper">
+        <!-- <section class="team-section pt-130 fade-wrapper">
             <div class="container">
                 <div class="section-heading text-center">
                     <h4 class="sub-heading" data-text-animation="fade-in" data-duration="1.5">Team Members</h4>
@@ -790,7 +790,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- ./ team-section -->
 
         <section class="counter-section pt-130 pb-130">
@@ -798,28 +798,29 @@
                 <div class="row gy-lg-0 gy-4">
                     <div class="col-lg-3 col-md-6">
                         <div class="counter-item">
-                            <h3 class="title"><span class="odometer" data-count="10">0</span></h3>
+                            <h3 class="title"><span class="odometer" data-count="5">0</span>k</h3>
+                            <p>Clients</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="counter-item">
+                            <h3 class="title"><span class="odometer" data-count="24">0</span></h3>
+                            <p>Brands</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="counter-item">
+                            <h3 class="title"><span class="odometer" data-count="9">0</span></h3>
+                            <p>Countries</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="counter-item">
+                            <h3 class="title"><span class="odometer" data-count="3">0</span>+</h3>
                             <p>Years of <br>Experience</p>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6">
-                        <div class="counter-item">
-                            <h3 class="title"><span class="odometer" data-count="18">0</span></h3>
-                            <p>Sillded <br> Perforamce</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6">
-                        <div class="counter-item">
-                            <h3 class="title"><span class="odometer" data-count="32">0</span></h3>
-                            <p>Visited <br> Conference</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6">
-                        <div class="counter-item">
-                            <h3 class="title"><span class="odometer" data-count="1">0</span>k</h3>
-                            <p>Years of <br>Experience</p>
-                        </div>
-                    </div>
+                    
                 </div>
             </div>
         </section>
@@ -920,7 +921,7 @@
         </section>
         <!-- ./ brand-section -->
 
-        <section class="blog-section pb-130 fade-wrapper">
+        <!-- <section class="blog-section pb-130 fade-wrapper">
             <div class="container">
                 <div class="section-heading text-center">
                     <h4 class="sub-heading" data-text-animation="fade-in" data-duration="1.5">Blog & News</h4>
@@ -965,7 +966,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- ./ blog-section -->
 
         <section class="cta-section pb-130">
