--- a/index.html
+++ b/index.html
@@ -36,10 +36,7 @@
                     </div>
                     <div class="header-right-wrap">
                         <div class="header-menu-wrap">
-                            <div class="mobile-menu-items">
-                                <ul>
-                                    <li class=" active mega-menu">
-                                        <a href="index.html">Home</a>
+                            <div class="mobile-menu-items">                                 <ul>                                     <li class=" mega-menu">                                         <a href="index.html">Home</a>
                                         <!-- <ul>
                                             <li><a href="index.html">Web Design</a></li>
                                             <li><a href="index-2.html">Creative Studio</a></li>
@@ -230,7 +227,7 @@
         <div id="smooth-content">
 
         <section class="hero-section-2">
-            <div class="hero-text">Route to 
+            <div class="hero-text">Route To 
                 <span class="inner-text" style="color: #3F5AF3;">
                     Market
                     <!-- <span class="container-svg">
@@ -277,7 +274,7 @@
                 <div class="col-lg-6">
                     <div class="hero-info">
                         <div class="section-heading">
-                            <h4 class="sub-heading after-none anim-text" data-text-animation="fade-in" data-duration="1.5">Welcome to our agency</h4>
+                            <h4 class="sub-heading after-none anim-text" data-text-animation="fade-in" data-duration="1.5">Welcome to R2MI</h4>
                             <h2 class="section-title anim-text">Strategic Growth</h2>
                             <h2 class="section-title anim-text">Hub</h2>
                             <p>India’s first fully integrated sales, distribution, and marketing powerhouse, driving business success with precision and innovation.</p>
@@ -490,17 +487,17 @@
                         <div class="about-content-2 fade-wrapper">
                             <div class="section-heading">
                                 <h4 class="sub-heading after-none" data-text-animation="fade-in" data-duration="1.5">About Our Company</h4>
-                                <h2 class="section-title" data-text-animation="fade-in-right" data-split="char" data-duration="0.6" data-stagger="0.04">We design and develop outstanding Digital Products and digital- first Brands.</h2>
-                                <p class="fade-top">Platea vehicula rutrum curae magna taciti acut malesuada inceptos phasellus massa, eget ultrices tempor lacinia dictumst tincidunt leo mollis luctus varius gravida eleifend cursus litora consequat...</p>
+                                <h2 class="section-title" data-text-animation="fade-in-right" data-split="char" data-duration="0.6" data-stagger="0.04">We create outstanding Marketing Strategies and experience-driven Brands.</h2>
+                                <p class="fade-top">At R2M, we craft innovative marketing solutions and brand strategies that drive business success. From cutting-edge digital campaigns to on-ground activations, we ensure your brand stands out in every space.</p>
                             </div>
                             <div class="about-items fade-top">
                                 <div class="about-item">
                                     <div class="icon"><img src="assets/img/icon/about-1.png" alt="icon"></div>
-                                    <div class="content"><h4 class="title">Professional Creative <br>Team Members</h4></div>
+                                    <div class="content"><h4 class="title">Strategic Marketing  <br>& Branding</h4></div>
                                 </div>
                                 <div class="about-item">
                                     <div class="icon"><img src="assets/img/icon/about-2.png" alt="icon"></div>
-                                    <div class="content"><h4 class="title">Provide Market Standard <br>Service to Client’s</h4></div>
+                                    <div class="content"><h4 class="title">Engaging Consumer <br>Experiences</h4></div>
                                 </div>
                             </div>
                             <div class="about-btn fade-top">
@@ -816,7 +813,7 @@
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <div class="counter-item">
-                            <h3 class="title"><span class="odometer" data-count="3">0</span>+</h3>
+                            <h3 class="title"><span class="odometer" data-count="8">0</span>+</h3>
                             <p>Years of <br>Experience</p>
                         </div>
                     </div>
@@ -848,8 +845,8 @@
                             <div class="about-content-3 fade-wrapper">
                                 <div class="section-heading mb-0">
                                     <h4 class="sub-heading after-none" data-text-animation="fade-in" data-duration="1.5">About Our Company</h4>
-                                    <h2 class="section-title" data-text-animation="fade-in-right" data-split="char" data-duration="0.6" data-stagger="0.03">We design and develop <br> outstanding Digital Products</h2>
-                                    <p class="fade-top">Platea vehicula rutrum curae magna taciti acut malesuada inceptos phasellus massa, <br> eget ultrices tempor lacinia dictumst tincidunt leo mollis luctus varius gravida eleifend  <br>cursus litora consequat...</p>
+                                    <h2 class="section-title" data-text-animation="fade-in-right" data-split="char" data-duration="0.6" data-stagger="0.03">From One Root, <br>Many Possibilities</h2>
+                                    <p class="fade-top">Just as a single seed grows into a tree with unique branches, leaves, flowers, and fruits, we believe in expanding across diverse industries and regions while staying true to our core values. Inspired by the Sanskrit philosophy "Ekoham Bahushyam"—"The One who chose to become Many"—our mission is to foster growth, innovation, and success across multiple business landscapes.</p>
                                     <div class="about-btn fade-top">
                                         <a href="about.html" class="rr-primary-btn">Get Started Now <i class="fa-sharp fa-regular fa-arrow-right"></i></a>
                                     </div>
@@ -1040,9 +1037,9 @@
                                 <h3 class="widget-title">Contact Us</h3>
                             </div>
                             <ul class="address-list">
-                                <li><a href="mailto:support@agency.com">support@agency.com</a></li>
-                                <li><a href="tel:+2585492153215">+258 (549) 2158 3215</a></li>
-                                <li>2589 Dorland Street Luke INUA <br> Berlin, Germany</li>
+                                <li><a href="mailto:info@r2mi.in">info@r2mi.in</a></li>
+                                <li><a href="tel:+918048534240">+91 8048534240</a></li>
+                                <li>Above Food World, 1st Floor Gandhi Bazar Main Road,<br>Basavanagudi, Bengaluru-560004, Karnataka.</li>
                             </ul>
                         </div>
                     </div>
