--- a/contact.html
+++ b/contact.html
@@ -36,10 +36,7 @@
                     </div>
                     <div class="header-right-wrap">
                         <div class="header-menu-wrap">
-                            <div class="mobile-menu-items">
-                                <ul>
-                                    <li class=" active mega-menu">
-                                        <a href="index.html">Home</a>
+                            <div class="mobile-menu-items">                                 <ul>                                     <li class=" mega-menu">                                         <a href="index.html">Home</a>
                                         <!-- <ul>
                                             <li><a href="index.html">Web Design</a></li>
                                             <li><a href="index-2.html">Creative Studio</a></li>
@@ -252,7 +249,7 @@
                         <div class="contact-content">
                             <div class="section-heading">
                                 <h4 class="sub-heading after-none" data-text-animation="fade-in" data-duration="1.5">Contact Us</h4>
-                                <h2 class="section-title" data-text-animation data-split="word" data-duration="1">Let’s working together</h2>
+                                <h2 class="section-title" data-text-animation data-split="word" data-duration="1">Let’s work together</h2>
                                 <p>Thank you for your interest in Attach Web Agency. We're excited to hear from you and discuss...</p>
                             </div>
                             <div class="contact-list">
@@ -262,7 +259,7 @@
                                     </div>
                                     <div class="content">
                                         <h4 class="title">Our Address</h4>
-                                        <p>2690 Hilton Street Victoria Road, <br>New York, Canada</p>
+                                        <p>Above Food World, 1st Floor Gandhi Bazar Main Road, Basavanagudi, Bengaluru-560004, Karnataka.</p>
                                     </div>
                                 </div>
                                 <div class="list-item">
@@ -271,8 +268,8 @@
                                     </div>
                                     <div class="content">
                                         <h4 class="title">Phone Number</h4>
-                                        <span><a href="tel:+65485965789">(+65) - 48596 - 5789</a></span>
-                                        <span><a href="mailto:hello@acadu.com">hello@acadu.com</a></span>
+                                        <span><a href="tel:+65485965789">+91 8048534240</a></span>
+                                        <span><a href="mailto:hello@acadu.com">info@r2mi.in</a></span>
                                     </div>
                                 </div>
                                 <div class="list-item">
@@ -383,9 +380,9 @@
                                 <h3 class="widget-title">Contact Us</h3>
                             </div>
                             <ul class="address-list">
-                                <li><a href="mailto:support@agency.com">support@agency.com</a></li>
-                                <li><a href="tel:+2585492153215">+258 (549) 2158 3215</a></li>
-                                <li>2589 Dorland Street Luke INUA <br> Berlin, Germany</li>
+                                <li><a href="mailto:info@r2mi.in">info@r2mi.in</a></li>
+                                <li><a href="tel:+2585492153215">+91 8048534240</a></li>
+                                <li>Above Food World, 1st Floor Gandhi Bazar Main Road,<br> Berlin, Germany</li>
                             </ul>
                         </div>
                     </div>
