--- a/error.html
+++ b/error.html
@@ -273,9 +273,9 @@
                                 <h3 class="widget-title">Contact Us</h3>
                             </div>
                             <ul class="address-list">
-                                <li><a href="mailto:support@agency.com">support@agency.com</a></li>
-                                <li><a href="tel:+2585492153215">+258 (549) 2158 3215</a></li>
-                                <li>2589 Dorland Street Luke INUA <br> Berlin, Germany</li>
+                                <li><a href="mailto:info@r2mi.in">info@r2mi.in</a></li>
+                                <li><a href="tel:+2585492153215">+91 8048534240</a></li>
+                                <li>Above Food World, 1st Floor Gandhi Bazar Main Road,<br> Berlin, Germany</li>
                             </ul>
                         </div>
                     </div>
