logo updated + preloader image changed

--- a/about.html
+++ b/about.html
@@ -205,7 +205,7 @@
     <!--/.sidebar-area-->
 
     <div id="preloader">
-        <div class="loading" data-loading-text="R2MI"></div>
+        <div class="loading"> <img src="assets/img/logo/logo-2.png" alt="logo"></div>
     </div>
     <!-- ./ preloader -->
 
@@ -326,29 +326,29 @@
                     <div class="row gy-lg-0 gy-4">
                         <div class="col-lg-3 col-md-6">
                             <div class="counter-item">
-                                <h3 class="title"><span class="odometer" data-count="5">0</span>k</h3>
+                                <h3 class="title"><span class="odometer" data-count="1">0</span>k</h3>
                                 <p>Clients</p>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6">
                             <div class="counter-item">
-                                <h3 class="title"><span class="odometer" data-count="24">0</span></h3>
+                                <h3 class="title"><span class="odometer" data-count="100">0</span></h3>
                                 <p>Brands</p>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6">
                             <div class="counter-item">
-                                <h3 class="title"><span class="odometer" data-count="9">0</span></h3>
+                                <h3 class="title"><span class="odometer" data-count="5">0</span></h3>
                                 <p>Countries</p>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6">
                             <div class="counter-item">
-                                <h3 class="title"><span class="odometer" data-count="8">0</span>+</h3>
+                                <h3 class="title"><span class="odometer" data-count="6">0</span>+</h3>
                                 <p>Years of <br>Experience</p>
                             </div>
                         </div>
-                        
+
                     </div>
                 </div>
             </section>
