--- a/error.html
+++ b/error.html
@@ -205,10 +205,7 @@
             </div>
         </div>
         <!--/.sidebar-area-->
-
-        <div id="preloader">
-            <div class="loading" data-loading-text="R2MI"></div>
-        </div>
+<div id="preloader">         <div class="loading"> <img src="assets/img/logo/logo-2.png" alt="logo"></div>     </div>
 
     <div id="smooth-wrapper">
         <div id="smooth-content">
