--- a/contact.html
+++ b/contact.html
@@ -217,10 +217,7 @@
             </div>
         </div>
         <!--/.sidebar-area-->
-
-        <div id="preloader">
-            <div class="loading" data-loading-text="R2MI"></div>
-        </div>
+<div id="preloader">         <div class="loading"> <img src="assets/img/logo/logo-2.png" alt="logo"></div>     </div>
         <!-- ./ preloader -->
 
     <div id="smooth-wrapper">
