video updated + project detials page added + blog -> projects

--- a/error.html
+++ b/error.html
@@ -85,7 +85,7 @@
                                         </ul>
                                     </li>
                                     <li class="menu-item-has-children">
-                                        <a href="blog.html">Blog</a>
+                                        <a href="project.html">Projects</a>
                                         <ul>
                                             <li><a href="blog-grid.html">Blog Grid</a></li>
                                             <li><a href="blog-grid-2.html">Blog list</a></li>
