--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@
                                         </ul>
                                     </li> -->
                                     <li class="">
-                                        <a href="blog.html">Blog</a>
+                                        <a href="project.html">Projects</a>
                                         <!-- <ul>
                                             <li><a href="blog-grid.html">Blog Grid</a></li>
                                             <li><a href="blog-grid-2.html">Blog list</a></li>
