--- a/contact.html
+++ b/contact.html
@@ -343,97 +343,110 @@
         </div>
         <!-- ./ map-wrapper -->
 
-        <footer class="footer-section bg-dark-1">
-            <div class="shape"><img src="assets/img/shapes/footer-shape.png" alt="footer"></div>
-            <div class="container">
-                <div class="row footer-wrap">
-                    <div class="col-lg-3 col-md-6">
-                        <div class="footer-widget">
-                            <div class="widget-header">
-                                <div class="footer-logo">
-                                    <a href="index.html"><img src="assets/img/logo/logo-2.png" alt="logo"></a>
+        <footer class="footer-section footer-2 bg-dark-1">
+                <div class="shape"><img src="assets/img/shapes/footer-shape.png" alt="footer"></div>
+                <div class="container">
+                    <div class="footer-top">
+                        <div class="footer-logo">
+                            <a href="index.html"><img src="assets/img/logo/logo-2.png" alt="logo"></a>
+                        </div>
+                        <ul class="social-list">
+                            <li class="facebook">
+                                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                            </li>
+                            <li class="pinterest">
+                                <a href="#"><i class="fab fa-pinterest"></i></a>
+                            </li>
+                            <li class="twitter">
+                                <a href="#"><i class="fab fa-twitter"></i></a>
+                            </li>
+                            <li class="instagram">
+                                <a href="#"><i class="fab fa-instagram"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="row footer-wrap">
+                        <div class="col-lg-4 col-md-6">
+                            <div class="footer-widget">
+                                <!-- <div class="widget-header">
+                                    <h3 class="widget-title">Company</h3>
+                                </div> -->
+                                <ul class="footer-list">
+                                    <li><a href="about.html">About Us</a></li>
+                                    <li><a href="project.html">Our Projects</a></li>
+                                    <li><a href="service.html">Our Services</a></li>
+                                    <li><a href="team.html">Our Team</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6">
+                            <div class="footer-widget">
+                                <!-- <div class="widget-header">
+                                    <h3 class="widget-title">Working Time</h3>
+                                </div> -->
+                                <ul class="footer-list">
+                                    <li>Mon - Fri: 9:00 AM - 5:00 PM</li>
+                                    <li>Saturday: 10:00 AM - 6:00 PM</li>
+                                    <li>Sunday Closed</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6">
+                            <div class="footer-widget">
+                                <div class="widget-header">
+                                    <h3 class="widget-title">Contact Us</h3>
+                                </div>
+                                <ul class="address-list">
+                                    <li><a href="mailto:info@r2mi.in">info@r2mi.in</a></li>
+                                    <!-- <li><a href="tel:+918048534240">+91 8048534240</a></li> -->
+                                    <li>Above Food World, 1st Floor Gandhi Bazar Main Road,<br>Basavanagudi,
+                                        Bengaluru-560004, Karnataka.</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <!-- <div class="col-lg-3 col-md-6">
+                            <div class="footer-widget">
+                                <div class="widget-header">
+                                    <h3 class="widget-title">Subscribe newsletter</h3>
+                                </div>
+                                <div class="footer-form mb-20">
+                                    <form action="#" class="mt-subscribe-form">
+                                        <input class="form-control" type="email" name="email"
+                                            placeholder="Email address">
+                                        <input type="hidden" name="action" value="mailchimpsubscribe">
+                                        <button class="submit">Sign Up</button>
+                                        <div class="clearfix"></div>
+                                    </form>
+                                </div>
+                                <div class="form-check form-item">
+                                    <input class="form-check-input" type="checkbox" value="" id="man">
+                                    <label class="form-check-label" for="man">
+                                        I’m okay with getting emails and having
+                                        that tracked to improve my experience
+                                    </label>
                                 </div>
                             </div>
-                            <p class="mb-20">Centric aplications productize before front end vortals visualize front end is results and value added</p>
-                            <h4 class="title">WE ARE AVAILABLE <span>Mon-Sat: 09.00 am to 6.30 pm</span></h4>
-                        </div>
+                        </div> -->
                     </div>
-                    <div class="col-lg-3 col-md-6">
-                        <div class="footer-widget footer-col-2">
-                            <div class="widget-header">
-                                <h3 class="widget-title">Useful Links</h3>
+                </div>
+                <div class="copyright-area">
+                    <div class="container">
+                        <div class="row copyright-content justify-content-center">
+                            <div class="col-lg-6 col-md-12">
+                                <p class="mb-0">© 2024 R2MI. All Rights Reserved.</p>
                             </div>
-                            <ul class="footer-list">
-                                <li><a href="about.html">About Us</a></li>
-                                <li><a href="project.html">Our Gallery</a></li>
-                                <li><a href="service.html">Our Services</a></li>
-                                <li><a href="team.html">Our Team</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6">
-                        <div class="footer-widget">
-                            <div class="widget-header">
-                                <h3 class="widget-title">Contact Us</h3>
-                            </div>
-                            <ul class="address-list">
-                                <li><a href="mailto:info@r2mi.in">info@r2mi.in</a></li>
-                                <li><a href="tel:+2585492153215">+91 8048534240</a></li>
-                                <li>Above Food World, 1st Floor Gandhi Bazar Main Road,<br> Berlin, Germany</li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6">
-                        <div class="footer-widget">
-                            <div class="widget-header">
-                                <h3 class="widget-title">Subscribe newsletter</h3>
-                            </div>
-                            <div class="footer-form mb-20">
-                                <form action="#" class="rr-subscribe-form">
-                                    <input class="form-control" type="email" name="email" placeholder="Email address">
-                                    <input type="hidden" name="action" value="mailchimpsubscribe">
-                                    <button class="submit">Sign Up</button>
-                                    <div class="clearfix"></div>
-                                </form>
-                            </div>
-                            <div class="form-check form-item">
-                                <input class="form-check-input" type="checkbox" value="" id="man">
-                                <label class="form-check-label" for="man">
-                                    I’m okay with getting emails and having
-                                    that tracked to improve my experience
-                                </label>
+                            <div class="col-lg-6 col-md-12">
+                                <ul class="copyright-list">
+                                    <li><a href="contact.html">Security</a></li>
+                                    <li><a href="contact.html">Privacy & Cookie Policy</a></li>
+                                    <li><a href="contact.html">Terms of Services</a></li>
+                                </ul>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="copyright-area">
-                <div class="container">
-                    <div class="row copyright-content">
-                        <div class="col-md-6">
-                            <p>© 2024 R2MI. All Rights Reserved.</p>
-                        </div>
-                        <div class="col-md-6">
-                            <ul class="social-list">
-                                <li class="facebook">
-                                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                                </li>
-                                <li class="pinterest">
-                                    <a href="#"><i class="fab fa-pinterest"></i></a>
-                                </li>
-                                <li class="twitter">
-                                    <a href="#"><i class="fab fa-twitter"></i></a>
-                                </li>
-                                <li class="instagram">
-                                    <a href="#"><i class="fab fa-instagram"></i></a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </footer>
-        <!-- ./ footer-section -->
+            </footer>
+            <!-- ./ footer-section -->
 
         </div>
     </div>
