r2mi home commit - initial

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <div class="header-menu-wrap">
                         <div class="mobile-menu-items">
                             <ul>
-                                <li class=" mega-menu"> <a href="index.html">Home</a>
+                                <li class="mega-menu"> <a href="index.html">Home</a>
                                     <!-- <ul>
                                             <li><a href="index.html">Web Design</a></li>
                                             <li><a href="index-2.html">Creative Studio</a></li>
@@ -194,7 +194,7 @@
                     </li>
                 </ul>
             </div>
-            <ul class="side-menu-social">
+            <ul class="side-menu-social ">
                 <li class="facebook"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                 <li class="instagram"><a href="#"><i class="fab fa-instagram"></i></a></li>
                 <li class="twitter"><a href="#"><i class="fab fa-twitter"></i></a></li>
@@ -1118,7 +1118,7 @@
         </section> -->
             <!-- ./ blog-section -->
 
-            <section class="cta-section pb-130">
+            <section class="cta-section pb-130 pt-110">
                 <div class="container">
                     <div class="cta-wrap text-center">
                         <div class="section-heading text-center">
